<resources>
    <string name="app_name">RealEstateManager</string>

    <string name="sample_text">
        Introducing a dynamic brother sister realtor team with combined buying and selling talents never before experienced by Victoria and its surrounding communities.\nVictoria Realtors Katherine Gray and Patrick Hossack present as a team with ability and competence that thoroughly complement each other. Their team relationship is based on 30 plus years of being each other’s strongest support. Both have combined years of knowledge and experience of the Greater Victoria market giving their clients confidence when buying or selling their home.\nAs members of The Agency Real Estate Group, we have access to the most up to date information to ensure we can meet your goals. If you’re currently looking for a real estate agent, you can learn more about us by clicking below.
    </string>

    <!--    BottomAppBar buttons-->
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="sorting">Sorting</string>
    <string name="filter">Filter</string>
    <string name="loan_simulator">Loan Simulator</string>
    <string name="currency_converter">Currency converter</string>
    <string name="clear_filter">Clear filter</string>
    <string name="add">Add</string>
    <string name="add_offer">Add a new offer</string>
    <string name="add_agent">Add a new agent</string>
    <string name="agent_avatar">Agent avatar</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>

    <string name="address">Address</string>
    <string name="complement">Complement</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zip code</string>
    <string name="country">Country</string>
    <string name="select_property_type">Select property\'s type</string>
    <string name="select_offer_type">Select offer\'s type</string>
    <string name="price">Price</string>
    <string name="surface">Surface</string>
    <string name="rooms">Rooms</string>
    <string name="wc">WC</string>
    <string name="bathroom">Bathrooms</string>
    <string name="description">Description</string>
    <string name="select_agent_in_charge">Select the agent in charge</string>
    <string name="publication_date_title">Publication date</string>
    <string name="publication_date_hint">On the market since</string>
    <string name="closed">Closed</string>
    <string name="closure_date_title">Closure date</string>
    <string name="closure_date_hint">Closed since</string>
    <string name="photo">Enter photo\'s title</string>
    <string name="delete_icon">Delete</string>
    <string name="add_photo">Add picture</string>
    <string name="type">Type</string>
    <string name="agent">Agent</string>
    <string name="characteristics">Characteristics</string>
    <string name="dates">Dates</string>
    <string name="pictures">Pictures</string>
    <string name="bus_station">Bus station</string>
    <string name="market_mall">Market / Mall</string>
    <string name="medical_center">Medical center</string>
    <string name="sport_centern">Sport center</string>
    <string name="cultural_center">Cultural center</string>
    <string name="school">School / University</string>
    <string name="park">Park</string>
    <string name="bar_coffee_shop">Bar / Coffeeshop</string>
    <string name="restaurant">Restaurant</string>
    <string name="poi">Points of interest</string>
    <string name="nearby_poi">Nearby\n points of interest</string>
    <string name="particularities">Particularities</string>
    <string name="garage">Garage</string>
    <string name="parking_lot">Parking lot</string>
    <string name="basement">Basement</string>
    <string name="balcony">Balcony</string>
    <string name="backyard">Backyard</string>
    <string name="gym">Gym</string>
    <string name="sauna">Sauna</string>
    <string name="swimming_pool">Swimming pool</string>
    <string name="garden">Garden</string>
    <string name="jacuzzi">Jacuzzi</string>
    <string name="property_value_title">Property Value:</string>
    <string name="property_value_hint">Property\'s price</string>
    <string name="down_payment_title">Down Payment:</string>
    <string name="down_payment_hint">Down payment</string>
    <string name="interest_rate_title">Interest Rate:</string>
    <string name="interest_rate_hint">Interest rate</string>
    <string name="usd">USD</string>
    <string name="euro">EURO</string>
    <string name="loan_term_title">Loan Term:</string>
    <string name="calculate">Calculate</string>
    <string name="loan_simulator_results_body">A loan of %1$s\%% interest rate over %2$s years period is estimated to a monthly payment of:</string>
    <string name="loan_simulator_monthly_payments">%1$s</string>
    <string name="sale">FOR SALE</string>
    <string name="rent">FOR RENT</string>
    <string name="sold">Sold</string>
    <string name="rented">Rented</string>
    <string name="house">House</string>
    <string name="apartment">Apartment</string>
    <string name="duplex">Duplex</string>
    <string name="mansion">Mansion</string>
    <string name="property_type">Property type:</string>
    <string name="offer_type">Offer type:</string>
    <string name="availability">Availability:</string>
    <string name="available">Available</string>
    <string name="min_price">Min price</string>
    <string name="max_price">Max price</string>
    <string name="min_surface">Min surface</string>
    <string name="max_surface">Max surface</string>
    <string name="min_rooms">Min rooms</string>
    <string name="max_rooms">Max rooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="min_bathrooms">Min bathrooms</string>
    <string name="max_bathrooms">Max bathrooms</string>
    <string name="location">Location</string>
    <string name="publication_date">Publication date</string>
    <string name="from">From…</string>
    <string name="to">to…</string>
    <string name="closure_date">Closure date</string>
    <string name="price_asc">Price ascending</string>
    <string name="price_desc">Price descending</string>
    <string name="surface_desc">Surface descending</string>
    <string name="surface_asc">Surface ascending</string>
    <string name="publicationDate_asc">Publication date ascending</string>
    <string name="publicationDate_desc">Publication date descending</string>
    <string name="closureDate_asc">Closure date ascending</string>
    <string name="closureDate_desc">Closure date descending</string>
    <string name="invalid_input">The input is incomplete or invalid</string>
    <string name="save_offer">Save offer</string>
    <string name="delete_offer">Delete offer</string>
    <string name="delete_agent">Delete agent</string>
    <string name="save_agent">Save agent</string>
    <string name="add_new_offer">Add a new offer</string>
    <string name="edit_offer">Edit offer</string>
    <string name="add_new_agent">Add a new agent</string>
    <string name="edit_agent">Edit agent</string>
    <string name="empty_agent_list">You can\'t create an offer if there\'s no agents. First, create an agent.</string>

    <string name="enable_gps">PLease enable GPS</string>
    <string name="required_for_this_app">GPS is requiered for this app.</string>
    <string name="enable_now">Enable now</string>
    <string name="select_capture_image"><![CDATA[Please select or capture image]]></string>
    <string name="unknown_error_msg">An unknown error has occurred</string>
    <string name="permission_denied">Permission denied</string>
    <string name="sales">Sales</string>
    <string name="rentals">Rentals</string>
    <string name="filter_already_off">The is no filter to clear</string>
    <string name="filter_turned_off">The filter has been cleared</string>
    <string name="all">All</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply">Apply</string>
    <string name="delete_offer_not_allowed">Deleting an offer is currently not allowed</string>
    <string name="delete_agent_not_allowed">Deleting an agent is currently not allowed</string>
    <string name="select_existing_agent">Edit an existing agent</string>
    <string name="invalid_address">Address not found on Google Map. You won\'t be able to display it on mapview</string>
    <string name="currency">Currency</string>

</resources>