<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="fr.mjoudar.realestatemanager.ui.filter.FilterDialogViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/section_filter_publicationDate_title"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sorting"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/section_filter_sorting_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radio_button_price_asc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_asc"
                android:checked="@={viewModel.boolSorting[0]}"/>
            <RadioButton
                android:id="@+id/radio_button_price_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_desc"
                android:checked="@={viewModel.boolSorting[1]}"/>
            <RadioButton
                android:id="@+id/radio_button_surface_asc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surface_asc"
                android:checked="@={viewModel.boolSorting[2]}"/>
            <RadioButton
                android:id="@+id/radio_button_surface_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surface_desc"
                android:checked="@={viewModel.boolSorting[3]}"/>
            <RadioButton
                android:id="@+id/radio_button_publicationDate_asc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publicationDate_asc"
                android:checked="@={viewModel.boolSorting[4]}"/>
            <RadioButton
                android:id="@+id/radio_button_publicationDate_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publicationDate_desc"
                android:checked="@={viewModel.boolSorting[5]}"/>
            <RadioButton
                android:id="@+id/radio_button_closureDate_asc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closureDate_asc"
                android:checked="@={viewModel.boolSorting[6]}"/>
            <RadioButton
                android:id="@+id/radio_button_closureDate_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closureDate_desc"
                android:checked="@={viewModel.boolSorting[7]}"/>

        </RadioGroup>
    </LinearLayout>

</layout>