<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="fr.mjoudar.realestatemanager.ui.filter.FilterDialogViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/section_filter_property_type_title"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/property_type"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/filter_house"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/house"
                android:checked="@={viewModel.boolPropertyTypes[0]}" />
            <CheckBox
                android:id="@+id/filter_apartment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apartment"
                android:checked="@={viewModel.boolPropertyTypes[1]}"/>
            <CheckBox
                android:id="@+id/filter_duplex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duplex"
                android:checked="@={viewModel.boolPropertyTypes[2]}"/>
            <CheckBox
                android:id="@+id/filter_mansion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mansion"
                android:checked="@={viewModel.boolPropertyTypes[3]}"/>
        </LinearLayout>
        <TextView
            android:id="@+id/section_filter_offer_type_title"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offer_type"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/filter_sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/house"
                android:checked="@={viewModel.boolOfferTypes[0]}" />
            <CheckBox
                android:id="@+id/filter_rent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/apartment"
                android:checked="@={viewModel.boolOfferTypes[1]}"/>
        </LinearLayout>
        <TextView
            android:id="@+id/section_filter_availability_title"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/availability"
            android:textStyle="bold"
            />
        <RadioGroup
            android:id="@+id/filter_availability_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/filter_radio_button_available"
            android:orientation="horizontal"
            android:layout_marginStart="60dp">

            <RadioButton
                android:id="@+id/filter_radio_button_available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available"
                android:checked="@={viewModel.available}"/>

            <RadioButton
                android:id="@+id/filter_radio_button_unavailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="@string/closed"
                android:checked="@={viewModel.closed}"/>

        </RadioGroup>


    </LinearLayout>

</layout>